--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 
 		<h1>Prueba tus peticiones http</h1>
 		
-		<h4><a th:href="@{/api/list}">haz click en este enlace para acceder el JSON</a></h4>
+		<a th:href="@{/api/}">haz click en este enlace para acceder el JSON</a>
 		
 		
 
